<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_login"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/benchnine_bold"
                android:text="@string/tv_login"
                android:textColor="@color/colorBlack"
                android:textSize="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/benchnine_bold"
                android:text="@string/et_username"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/frame_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/benchnine_bold"
                android:text="@string/et_password"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_username" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_margin="20dp"
                android:background="@drawable/frame_edittext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/benchnine_bold"
                android:text="@string/tv_login"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/benchnine_bold"
                android:text="@string/btn_back"
                android:textColor="@color/colorBlack"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>